@@ -90,7 +90,10 @@ static void select_sample(MidSong *song, int v, MidInstrument *ip, int vel)
   f=song->voice[v].orig_frequency;
   for (i=0; i<s; i++)
     {
-      if (sp->low_vel <= vel && sp->high_vel >= vel &&
+      if (
+#ifdef TIMIDITY_USE_DLS
+	  sp->low_vel <= vel && sp->high_vel >= vel &&
+#endif
           sp->low_freq <= f && sp->high_freq >= f)
 	{
 	  song->voice[v].sample=sp;
